add main container

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <title>Resume</title>
   </head>
   <body>
-    <h1>My resume</h1>
-    <p>Haniyeh Peyvandi</p>
+    <div class="container">
+      <p>hello</p>
+    </div>
   </body>
 </html>
