--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   </head>
   <body>
     <div class="container">
-      <p>hello</p>
+      <section class="card">
+        <h2>About</h2>
+        <p>I'm a web developer since 2019 but it became more serious in 2020.
+          My learning never stop and I try to keep my self knowledge up to date.
+          now I work at bycheck as frontend developer (Vue.js and Nuxt.js)</p>
+      </section>
     </div>
   </body>
 </html>
