add about section

--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
   </head>
   <body>
     <div class="container">
-      <section class="card">
+      <section class="card card__about">
         <h2>About</h2>
-        <p>I'm a web developer since 2019 but it became more serious in 2020.
-          My learning never stop and I try to keep my self knowledge up to date.
-          now I work at bycheck as frontend developer (Vue.js and Nuxt.js)</p>
+        <p>
+          I started web developing in 2020. First I learned HTML, CSS and
+          JavaScript as frontend technologies. Then I learned PHP and MySQL as
+          backend technologies. After that I chose frontend as my professional
+          field and started learning React.js library. Now I'm looking for a
+          frontend developer position. My learning never stops and I try to keep
+          my knowledge up to date.
+        </p>
       </section>
     </div>
   </body>
