add experience section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="container">
-      <section class="card card__about">
+      <section class="card about">
         <h2>About</h2>
         <p>
           I started web developing in 2020. First I learned HTML, CSS and
@@ -25,6 +25,26 @@
           frontend developer position. My learning never stops and I try to keep
           my knowledge up to date.
         </p>
+      </section>
+      <section class="card experience">
+        <h2>Experience</h2>
+        <div class="experience__items">
+          <div class="experience__item">
+            <div class="experience__img">
+              <a
+                href="https://www.linkedin.com/company/pendarnet/"
+                target="_blank"
+                ><img src="./assets/images/Pendar-Logo.png" alt="Pendar-logo"
+              /></a>
+            </div>
+            <div class="experience__details">
+              <h3>Frontend Intern</h3>
+              <p>Pendar &middot; Full-time</p>
+              <p>Jul 2021 - Oct 2021 &middot; 4 mos</p>
+              <p>Semnan, Iran</p>
+            </div>
+          </div>
+        </div>
       </section>
     </div>
   </body>
