add education section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,52 @@
           </div>
         </div>
       </section>
+      <section class="card education">
+        <h2>Education</h2>
+        <div class="education__items">
+          <div class="education__item">
+            <div class="education__img">
+              <a
+                href="https://www.linkedin.com/school/alzahra-university/"
+                target="_blank"
+                ><img src="./assets/images/Alzahra-Logo.jpg" alt="Alzahra-logo"
+              /></a>
+            </div>
+            <div class="education__details">
+              <h3>
+                <a
+                  href="https://www.linkedin.com/school/alzahra-university/"
+                  target="_blank"
+                  >Alzahra University</a
+                >
+              </h3>
+              <p>Computer Engineering</p>
+              <p>Oct 2017 - Sep 2021</p>
+            </div>
+          </div>
+          <div class="education__item">
+            <div class="education__img">
+              <a
+                href="https://www.linkedin.com/school/iransampad/"
+                target="_blank"
+                ><img src="./assets/images/Sampad-Logo.jpg" alt="Sampad-logo"
+              /></a>
+            </div>
+            <div class="education__details">
+              <h3>
+                <a
+                  href="https://www.linkedin.com/school/iransampad/"
+                  target="_blank"
+                  >National Organization for Development of Exceptional Talents
+                  (Sampad)</a
+                >
+              </h3>
+              <p>High School Diploma, Mathematics</p>
+              <p>Oct 2010 - Jun 2017</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
