add license section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,41 @@
           </div>
         </div>
       </section>
+      <section class="card license">
+        <h2>Licenses & certifications</h2>
+        <div class="license__items">
+          <div class="license__item">
+            <div class="license__img">
+              <a
+                href="https://www.linkedin.com/company/alzahra-it-association/"
+                target="_blank"
+                ><img src="./assets/images/Alzahra-IT-Association.jpg" alt="Alzahra-IT-Association-logo"
+              /></a>
+            </div>
+            <div class="license__details">
+              <h3>
+                Frontend web development training course
+              </h3>
+              <p>Alzahra IT Association</p>
+            </div>
+          </div>
+          <div class="license__item">
+            <div class="license__img">
+              <a
+                href="https://www.linkedin.com/company/alzahra-it-association/"
+                target="_blank"
+                ><img src="./assets/images/Alzahra-IT-Association.jpg" alt="Alzahra-IT-Association-logo"
+              /></a>
+            </div>
+            <div class="license__details">
+              <h3>
+                PHP and MySQL training course
+              </h3>
+              <p>Alzahra IT Association</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
