add skill section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+      integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Resume</title>
   </head>
   <body>
@@ -100,13 +107,13 @@
               <a
                 href="https://www.linkedin.com/company/alzahra-it-association/"
                 target="_blank"
-                ><img src="./assets/images/Alzahra-IT-Association.jpg" alt="Alzahra-IT-Association-logo"
+                ><img
+                  src="./assets/images/Alzahra-IT-Association.jpg"
+                  alt="Alzahra-IT-Association-logo"
               /></a>
             </div>
             <div class="license__details">
-              <h3>
-                Frontend web development training course
-              </h3>
+              <h3>Frontend web development training course</h3>
               <p>Alzahra IT Association</p>
             </div>
           </div>
@@ -115,14 +122,93 @@
               <a
                 href="https://www.linkedin.com/company/alzahra-it-association/"
                 target="_blank"
-                ><img src="./assets/images/Alzahra-IT-Association.jpg" alt="Alzahra-IT-Association-logo"
+                ><img
+                  src="./assets/images/Alzahra-IT-Association.jpg"
+                  alt="Alzahra-IT-Association-logo"
               /></a>
             </div>
             <div class="license__details">
-              <h3>
-                PHP and MySQL training course
-              </h3>
+              <h3>PHP and MySQL training course</h3>
               <p>Alzahra IT Association</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="card skill">
+        <h2>Skills</h2>
+        <div class="skill__items">
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>HTML</h3>
+              <p>
+                <i class="fa-solid fa-clipboard-check"></i
+                ><span>Passed Linkedin Skill Assessment</span>
+              </p>
+              <p>
+                <i class="fa-solid fa-user-group"></i><span>1 endorsement</span>
+              </p>
+            </div>
+          </div>
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>Cascading Style Sheets (CSS)</h3>
+              <p>
+                <i class="fa-solid fa-clipboard-check"></i
+                ><span>Passed Linkedin Skill Assessment</span>
+              </p>
+              <p>
+                <i class="fa-solid fa-user-group"></i><span>1 endorsement</span>
+              </p>
+            </div>
+          </div>
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>Bootstrap</h3>
+            </div>
+          </div>
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>Responsive Web Design</h3>
+            </div>
+          </div>
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>JavaScript</h3>
+            </div>
+          </div>
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>jQuery</h3>
+            </div>
+          </div>
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>React.js</h3>
+            </div>
+          </div>
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>Next.js</h3>
+            </div>
+          </div>
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>Git</h3>
+            </div>
+          </div>
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>PHP</h3>
+            </div>
+          </div>
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>MySQL</h3>
+            </div>
+          </div>
+          <div class="skill__item">
+            <div class="skill__details">
+              <h3>WordPress</h3>
             </div>
           </div>
         </div>
