add intro section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,40 @@
   </head>
   <body>
     <div class="container">
+      <section class="card intro">
+        <div class="intro__header">
+          <div class="intro__img">
+            <img src="./assets/images/profile.jpg" alt="profile-image" />
+          </div>
+        </div>
+        <div class="intro__details">
+          <div class="details__left">
+            <h1>Haniyeh Peyvandi</h1>
+            <h3>Frontend Developer</h3>
+            <p>
+              Semnan Province, Iran &middot;
+              <span class="contactInfo">Contact info</span>
+            </p>
+            <p>154 connections</p>
+            <button class="btn btn--connect">
+              <i class="fa-solid fa-user-plus"></i>Connect
+            </button>
+            <button class="btn btn--msg">
+              <i class="fa-solid fa-lock"></i>Message
+            </button>
+            <button class="btn btn--more">More</button>
+          </div>
+          <div class="details__right">
+            <a
+              href="https://www.linkedin.com/school/alzahra-university/"
+              target="_blank"
+            >
+              <img src="./assets/images/Alzahra-Logo.jpg" alt="Alzahra-logo" />
+              <span>Alzahra University</span>
+            </a>
+          </div>
+        </div>
+      </section>
       <section class="card about">
         <h2>About</h2>
         <p>
