add language section

--- a/index.html
+++ b/index.html
@@ -289,6 +289,23 @@
           </div>
         </div>
       </section>
+      <section class="card language">
+        <h2>Languages</h2>
+        <div class="language__items">
+          <div class="language__item">
+            <div class="language__details">
+              <h3>English</h3>
+              <p>Limited working proficiency</p>
+            </div>
+          </div>
+          <div class="language__item">
+            <div class="language__details">
+              <h3>Persian</h3>
+              <p>Native or bilingual proficiency</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <script src="./js/main.js"></script>
