add project section

--- a/index.html
+++ b/index.html
@@ -306,6 +306,109 @@
           </div>
         </div>
       </section>
+      <section class="card project">
+        <h2>Projects</h2>
+        <div class="project__items">
+          <div class="project__item">
+            <div class="project__details">
+              <h3>weather-app</h3>
+              <button class="btn">
+                <a
+                  href="https://github.com/HaniyehPeyvandi/weather-app"
+                  target="_blank"
+                  >Show project<i
+                    class="fa-solid fa-arrow-up-right-from-square"
+                  ></i
+                ></a>
+              </button>
+            </div>
+          </div>
+          <div class="project__item">
+            <div class="project__details">
+              <h3>ContactList</h3>
+              <button class="btn">
+                <a
+                  href="https://github.com/HaniyehPeyvandi/ContactList"
+                  target="_blank"
+                  >Show project<i
+                    class="fa-solid fa-arrow-up-right-from-square"
+                  ></i
+                ></a>
+              </button>
+            </div>
+          </div>
+          <div class="project__item">
+            <div class="project__details">
+              <h3>csv-project</h3>
+              <button class="btn">
+                <a
+                  href="https://github.com/HaniyehPeyvandi/csv-project"
+                  target="_blank"
+                  >Show project<i
+                    class="fa-solid fa-arrow-up-right-from-square"
+                  ></i
+                ></a>
+              </button>
+            </div>
+          </div>
+          <div class="project__item">
+            <div class="project__details">
+              <h3>ExpenseTracker</h3>
+              <button class="btn">
+                <a
+                  href="https://github.com/HaniyehPeyvandi/ExpenseTracker"
+                  target="_blank"
+                  >Show project<i
+                    class="fa-solid fa-arrow-up-right-from-square"
+                  ></i
+                ></a>
+              </button>
+            </div>
+          </div>
+          <div class="project__item">
+            <div class="project__details">
+              <h3>TodoList</h3>
+              <button class="btn">
+                <a
+                  href="https://github.com/HaniyehPeyvandi/TodoList"
+                  target="_blank"
+                  >Show project<i
+                    class="fa-solid fa-arrow-up-right-from-square"
+                  ></i
+                ></a>
+              </button>
+            </div>
+          </div>
+          <div class="project__item">
+            <div class="project__details">
+              <h3>tapsi_project</h3>
+              <button class="btn">
+                <a
+                  href="https://github.com/HaniyehPeyvandi/tapsi_project"
+                  target="_blank"
+                  >Show project<i
+                    class="fa-solid fa-arrow-up-right-from-square"
+                  ></i
+                ></a>
+              </button>
+            </div>
+          </div>
+          <div class="project__item">
+            <div class="project__details">
+              <h3>banvaaz_project</h3>
+              <button class="btn">
+                <a
+                  href="https://github.com/HaniyehPeyvandi/banvaaz_project"
+                  target="_blank"
+                  >Show project<i
+                    class="fa-solid fa-arrow-up-right-from-square"
+                  ></i
+                ></a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
 
     <script src="./js/main.js"></script>
