--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       referrerpolicy="no-referrer"
     />
     <title>Resume</title>
+    <link rel="icon" type="image/png" href="assets/images/programmer.png">
   </head>
 
   <body>
