modify the text of about section

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       referrerpolicy="no-referrer"
     />
     <title>Resume</title>
-    <link rel="icon" type="image/png" href="assets/images/programmer.png">
+    <link rel="icon" type="image/png" href="assets/images/programmer.png" />
   </head>
 
   <body>
@@ -102,12 +102,12 @@
       <section class="card about">
         <h2>About</h2>
         <p>
-          I started web developing in 2020. First I learned HTML, CSS and
-          JavaScript as frontend technologies. Then I learned PHP and MySQL as
-          backend technologies. After that I chose frontend as my professional
-          field and started learning React.js library. Now I'm looking for a
-          frontend developer position. My learning never stops and I try to keep
-          my knowledge up to date.
+          I started web development in 2020. First, I learned HTML, CSS and
+          JavaScript as front-end technologies. Then I learned PHP and MySQL as
+          back-end technologies. After that, I chose front-end as my
+          professional field and I started learning React.js library. Now, I'm
+          looking for a front-end developer position. My learning process will
+          never stop and I will always try to keep my knowledge up to date.
         </p>
       </section>
       <section class="card experience">
