add show more/less button in skill section

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <title>Resume</title>
     <link rel="icon" type="image/png" href="assets/images/programmer.png" />
   </head>
@@ -111,7 +111,11 @@
           never stop and I will always try to keep my knowledge up to date.
         </p>
       </section>
-      <section class="card experience" data-aos="fade-up" data-aos-duration="1000">
+      <section
+        class="card experience"
+        data-aos="fade-up"
+        data-aos-duration="1000"
+      >
         <h2>Experience</h2>
         <div class="experience__items">
           <div class="experience__item">
@@ -131,7 +135,11 @@
           </div>
         </div>
       </section>
-      <section class="card education" data-aos="fade-up" data-aos-duration="1000">
+      <section
+        class="card education"
+        data-aos="fade-up"
+        data-aos-duration="1000"
+      >
         <h2>Education</h2>
         <div class="education__items">
           <div class="education__item">
@@ -244,54 +252,62 @@
               <h3>Bootstrap</h3>
             </div>
           </div>
-          <div class="skill__item">
+          <div class="skill__item skill__hidden">
             <div class="skill__details">
               <h3>Responsive Web Design</h3>
             </div>
           </div>
-          <div class="skill__item">
+          <div class="skill__item skill__hidden">
             <div class="skill__details">
               <h3>JavaScript</h3>
             </div>
           </div>
-          <div class="skill__item">
+          <div class="skill__item skill__hidden">
             <div class="skill__details">
               <h3>jQuery</h3>
             </div>
           </div>
-          <div class="skill__item">
+          <div class="skill__item skill__hidden">
             <div class="skill__details">
               <h3>React.js</h3>
             </div>
           </div>
-          <div class="skill__item">
+          <div class="skill__item skill__hidden">
             <div class="skill__details">
               <h3>Next.js</h3>
             </div>
           </div>
-          <div class="skill__item">
+          <div class="skill__item skill__hidden">
             <div class="skill__details">
               <h3>Git</h3>
             </div>
           </div>
-          <div class="skill__item">
+          <div class="skill__item skill__hidden">
             <div class="skill__details">
               <h3>PHP</h3>
             </div>
           </div>
-          <div class="skill__item">
+          <div class="skill__item skill__hidden">
             <div class="skill__details">
               <h3>MySQL</h3>
             </div>
           </div>
-          <div class="skill__item">
+          <div class="skill__item skill__hidden">
             <div class="skill__details">
               <h3>WordPress</h3>
             </div>
           </div>
         </div>
+        <div class="skill__footer">
+          <span class="skill__footerText">Show all skills</span
+          ><i class="fa-solid fa-chevron-down"></i>
+        </div>
       </section>
-      <section class="card language" data-aos="fade-up" data-aos-duration="1000">
+      <section
+        class="card language"
+        data-aos="fade-up"
+        data-aos-duration="1000"
+      >
         <h2>Languages</h2>
         <div class="language__items">
           <div class="language__item">
@@ -411,21 +427,40 @@
           </div>
         </div>
       </section>
-      <section class="card interest" data-aos="fade-up" data-aos-duration="1000">
+      <section
+        class="card interest"
+        data-aos="fade-up"
+        data-aos-duration="1000"
+      >
         <h2>Interests</h2>
         <div class="tab">
-          <button class="tabLink active" onclick="showContent(event, 'Companies')">Companies</button>
-          <button class="tabLink" onclick="showContent(event, 'Groups')">Groups</button>
+          <button
+            class="tabLink active"
+            onclick="showContent(event, 'Companies')"
+          >
+            Companies
+          </button>
+          <button class="tabLink" onclick="showContent(event, 'Groups')">
+            Groups
+          </button>
         </div>
         <div class="interest__items">
           <div class="tabContent active" id="Companies">
             <div class="interest__item">
               <div class="interest__img">
-                <a href="https://www.linkedin.com/company/tapsi/" target="_blank"><img src="assets/images/tapsi.jpg" alt="Tapsi-logo" /></a>
+                <a
+                  href="https://www.linkedin.com/company/tapsi/"
+                  target="_blank"
+                  ><img src="assets/images/tapsi.jpg" alt="Tapsi-logo"
+                /></a>
               </div>
               <div class="interest__details">
                 <h3>
-                  <a href="https://www.linkedin.com/company/tapsi/" target="_blank">TAPSI</a>
+                  <a
+                    href="https://www.linkedin.com/company/tapsi/"
+                    target="_blank"
+                    >TAPSI</a
+                  >
                 </h3>
                 <p>35,177 followers</p>
                 <button class="btn">
@@ -435,11 +470,19 @@
             </div>
             <div class="interest__item">
               <div class="interest__img">
-                <a href="https://www.linkedin.com/company/farabinvest/" target="_blank"><img src="assets/images/farabi.jpg" alt="Farabi-logo" /></a>
+                <a
+                  href="https://www.linkedin.com/company/farabinvest/"
+                  target="_blank"
+                  ><img src="assets/images/farabi.jpg" alt="Farabi-logo"
+                /></a>
               </div>
               <div class="interest__details">
                 <h3>
-                  <a href="https://www.linkedin.com/company/farabinvest/" target="_blank">Farabi Brokerage Co.</a>
+                  <a
+                    href="https://www.linkedin.com/company/farabinvest/"
+                    target="_blank"
+                    >Farabi Brokerage Co.</a
+                  >
                 </h3>
                 <p>2,276 followers</p>
                 <button class="btn">
@@ -451,11 +494,19 @@
           <div class="tabContent" id="Groups">
             <div class="interest__item">
               <div class="interest__img">
-                <a href="https://www.linkedin.com/groups/12730451/" target="_blank"><img src="assets/images/ba-ham.jpg" alt="BaHam-logo" /></a>
+                <a
+                  href="https://www.linkedin.com/groups/12730451/"
+                  target="_blank"
+                  ><img src="assets/images/ba-ham.jpg" alt="BaHam-logo"
+                /></a>
               </div>
               <div class="interest__details">
                 <h3>
-                  <a href="https://www.linkedin.com/groups/12730451/" target="_blank">با هم برای هم</a>
+                  <a
+                    href="https://www.linkedin.com/groups/12730451/"
+                    target="_blank"
+                    >با هم برای هم</a
+                  >
                 </h3>
                 <p>684 members</p>
                 <button class="btn">
@@ -465,11 +516,20 @@
             </div>
             <div class="interest__item">
               <div class="interest__img">
-                <a href="https://www.linkedin.com/groups/6519652/" target="_blank"><img src="assets/images/react-devs.jpg" alt="ReactDevs-logo" /></a>
+                <a
+                  href="https://www.linkedin.com/groups/6519652/"
+                  target="_blank"
+                  ><img src="assets/images/react-devs.jpg" alt="ReactDevs-logo"
+                /></a>
               </div>
               <div class="interest__details">
                 <h3>
-                  <a href="https://www.linkedin.com/groups/6519652/" target="_blank">React Developers - ReactJS & React Native Professional Development Mastermind</a>
+                  <a
+                    href="https://www.linkedin.com/groups/6519652/"
+                    target="_blank"
+                    >React Developers - ReactJS & React Native Professional
+                    Development Mastermind</a
+                  >
                 </h3>
                 <p>187,408 members</p>
                 <button class="btn">
