add show more/less button in project section

--- a/index.html
+++ b/index.html
@@ -299,8 +299,7 @@
           </div>
         </div>
         <div class="skill__footer">
-          <span class="skill__footerText">Show all skills</span
-          ><i class="fa-solid fa-chevron-down"></i>
+          <span class="skill__footerText">Show all skills</span><i class="fa-solid fa-chevron-down"></i>
         </div>
       </section>
       <section
@@ -369,7 +368,7 @@
               </button>
             </div>
           </div>
-          <div class="project__item">
+          <div class="project__item project__hidden">
             <div class="project__details">
               <h3>ExpenseTracker</h3>
               <button class="btn">
@@ -383,7 +382,7 @@
               </button>
             </div>
           </div>
-          <div class="project__item">
+          <div class="project__item project__hidden">
             <div class="project__details">
               <h3>TodoList</h3>
               <button class="btn">
@@ -397,7 +396,7 @@
               </button>
             </div>
           </div>
-          <div class="project__item">
+          <div class="project__item project__hidden">
             <div class="project__details">
               <h3>tapsi_project</h3>
               <button class="btn">
@@ -411,7 +410,7 @@
               </button>
             </div>
           </div>
-          <div class="project__item">
+          <div class="project__item project__hidden">
             <div class="project__details">
               <h3>banvaaz_project</h3>
               <button class="btn">
@@ -425,6 +424,9 @@
               </button>
             </div>
           </div>
+        </div>
+        <div class="project__footer">
+          <span class="project__footerText">Show all projects</span><i class="fa-solid fa-chevron-down"></i>
         </div>
       </section>
       <section
